# inspect_GTest-pthreads4w

./: CMakeLists.txt  README.md
.github/workflows/: continues_integration.yml
gtests/: CMakeLists.txt  simple_pthread.cpp  test_simple.cpp  test_template.cpp
gtests/googletest/: CMakeLists.txt
